--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAMES HERE"
+title: "CLimate Change Analysis"
+author: "Austin Chen, Kelly Du, Dianjing Fan"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
