--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "CLimate Change Analysis"
+title: "Climate Change Analysis"
 author: "Austin Chen, Kelly Du, Dianjing Fan"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
