--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -1,6 +1,7 @@
 # Proposal
 
 ## Research topic
+Climate change is commonly referred to as the long term change in Earth's climate and weather patterns, and although these changes may be naturally occurring, since the 1800s, artificial human activities have been the main driver.  Throughout the scientific community, climate change is no longer considered to be a "future" issue, in fact, changes to Earth's climate driven by the increased emissions of fossil fuels are already having widespread effects on the environment: rising global temperatures, shrinking ice sheets and glaciers, rising sea levels, depleting ozone, and extreme weather events such as droughts, heatwaves, and excessive rainfall.  Most, if not all of these changes can be attributed to quantifiable human factors, therefore, our project - Climate Change Analysis - seeks to explore and visualize these relationships.  For example, by examining time series data (by country) on atmospheric carbon dioxide concentrations, mean temperature change, mean sea level change, energy consumption, air pollution ...etc, we are hopefully able to gain some valuable insights on what each individual country's "contribution" to climate change is.  Furthermore, by bringing in additional data such as the population, Gross Domestic Product (GDP), and other characteristics of those same countries, a more significant relationship can potentially be realized.  Understanding that much of the world has been plagued by a global pandemic during the last couple of years (which undoubtedly affects human activity), we also seek to compare metrics such as air pollution before and during COVID-19.  Lastly, with the adoption of the Paris Agreement, focusing on climate change adaptation and finance, in 2015, we are interesting in seeing which countries actually implemented the proposed strategies to mitigate their climate contributions.  
 
 ## Data availability
 
