--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -5,4 +5,34 @@ Climate change is commonly referred to as the long term change in Earth's climat
 
 ## Data availability
 
-This data is collected by The University of Washington’s Pan-Arctic Ice Ocean and Modeling System, or PIOMAS. PIOMAS provides the sea ice volume data starting from 1979 until now. This dataset has 13 columns (year and 12 months), and 44 rows(1979-present). The volume is given in 103 km3, and it is updated montyly. The dataset is available in text file and CSV file from http://psc.apl.uw.edu/research/projects/arctic-sea-ice-volume-anomaly/data/. For this project, we plan to use import the csv version into R by calling read.csv().
+With climate change being such a forefront issue in the world today, there are vast amounts of data available on this subject, from a multitude of sources such as NASA, NOAA, and other climate organizations around the world.  Therefore, our group is planning to combine multiple data sets to output a more comprehensive analysis.  The following sections will denote the data sets we plan on using, as well as any relevant information regarding the data source and data collection process.  
+
+### Annual Surface Temperature Change
+
+https://climatedata.imf.org/datasets/4063314923d74187be9596f10d034914/explore 
+https://www.fao.org/faostat/en/#data/ET 
+
+This data set showcases the annual estimates of mean surface temperature change from 1961 to 2021 by country, with respect to a baseline climatology (defined as the period of 1951 to 1980).  The data comes from the Food and Agriculture Organization of the United Nations (FAO), and is updated annualy, as it is a yearly time series data.  The data is downloadable as a csv file, which can easily be read into R Studios.
+
+### Atmospheric Carbon Dioxide Concentrations
+
+https://climatedata.imf.org/datasets/9c3764c0efcc4c71934ab3988f219e0e/explore 
+https://gml.noaa.gov/ccgg/trends/ 
+
+This data set showcases the monthly atmospheric carbon dioxide levels, presented at the World level in parts per million (ppm).  The data comes from the National Oceanic and Atmopsheric Administration (NOAA), and is updated monthly.  Like the previous data set, this can be downloaded as a csv file, and easily read into R Studios.
+
+
+### Change in Mean Sea Levels
+https://climatedata.imf.org/datasets/b84a7e25159b4c65ba62d3f82c605855/explore 
+
+This data set showcases the changes in mean sea levels across 24 regions of the world, and the specific measurements (in millimeters) are estimated from satellite radar altimeters.  This data comes from NOAA, and its time series information is presented from 1992 to 2022, with 3/4 data points for every month in between.  Like the previous data set, this can be downloaded as a csv file, and easily read into R Studios.
+
+### Climate Related Disasters Frequency
+https://climatedata.imf.org/datasets/b13b69ee0dde43a99c811f592af4e821/explore 
+
+This data set showcases the trend in the number of climate related natural disasters each year, by country.  The data comes from the Emergency Events Database, which covers disasters that killed more than ten people, affected more than a hundred people, led to the declaration of a state of emergency, and led to a call for international assistance.  This time series data is updated yearly, and can be downloaded as a csv file, easily read into R Studios.  
+
+
+This data is collected by The University of Washington’s Pan-Arctic Ice Ocean and Modeling System, or PIOMAS. PIOMAS provides the sea ice volume data starting from 1979 until now. This data set has 13 columns (year and 12 months), and 44 rows(1979-present). The volume is given in 103 km3, and it is updated monthly. The data set is available in text file and CSV file from http://psc.apl.uw.edu/research/projects/arctic-sea-ice-volume-anomaly/data/. For this project, we plan to use import the csv version into R by calling read.csv().
+
+
