--- a/proposal.Rmd
+++ b/proposal.Rmd
@@ -40,17 +40,17 @@ This data set showcases the monthly changes in sea ice volume across the world f
 ### Population
 https://data.un.org/_Docs/SYB/CSV/SYB65_1_202209_Population,%20Surface%20Area%20and%20Density.csv
 
-This data set showcases the population grouped by country in 2010, 2015, 2017, and 2022, including population estimates, sex ratio, population percentage in different age groups, population density, and surface area. The data comes from United Nations database and is updated regularly. It can be downloaded as a csv file.
+This data set showcases the population grouped by country in 2010, 2015, 2017, and 2022, including population estimates, sex ratio, population percentage in different age groups, population density, and surface area. The data comes from United Nations database and is updated recently. It can be downloaded as a csv file.
 
 ### Population growth
 https://data.un.org/_Docs/SYB/CSV/SYB65_246_202209_Population%20Growth,%20Fertility%20and%20Mortality%20Indicators.csv
 
-This data set showcases the population growth, fertility, life expectancy and mortality grouped by country in 2010, 2015, 2017, and 2022. The data can also be downloaded from United Nations database as a csv file.
+This data set showcases the population growth, fertility, life expectancy and mortality grouped by country in 2010, 2015, 2017, and 2022. The data also comes from United Nations database and is updated recently. It can be downloaded as a csv file.
 
 ### GDP
 https://data.un.org/Data.aspx?q=gdp&d=SNAAMA&f=grID%3a101%3bcurrID%3aNCU%3bpcFlag%3a0
 
-This data set showcases GDP by type of expenditure (including Final consumption expenditure, Household consumption expenditure, General government final consumption expenditure, etc.) at current prices grouped by country from 1970 to 2020. The data can be downloaded from United Nations database as a csv file.
+This data set showcases GDP by type of expenditure (including Final consumption expenditure, Household consumption expenditure, General government final consumption expenditure, etc.) at current prices grouped by country from 1970 to 2020. The data can be downloaded from United Nations database as a csv file and is updated annually.
 
 ### Air pollution
 https://data.oecd.org/air/air-pollution-exposure.htm
