--- a/Chen_Copy/Working.Rmd
+++ b/Chen_Copy/Working.Rmd
@@ -57,45 +57,93 @@ temp_change_removed = na.omit(temp_change)
 library(reshape2)
 temp_change = temp_change[, -c(1)]
 
+ghg_chen = subset(df_ghg, Country %in% c("China","United States","India","France","Japan","Germany","Italy","United Kingdom","Mexico","Indonesia"))
+ghg_chen <- ghg_chen %>% mutate_all(as.character) %>% pivot_longer(cols = -c("Country","Data.source","Sector","Gas","Unit"), names_to = "Year", values_to = "value", names_prefix = "X")
+  
 subset(temp_change_removed, Country %in% c('United States', 'India', 'Japan', 'Germany', 'Indonesia', 'France', 'Brazil', 'United Kingdom', 'Italy', 'Mexico', 'China, P.R.: Mainland'))
 
 df_temp <- melt(temp_change_removed_top[, -c(1)], id.vars=c("Country"),value.name="Value", variable.name="Year")
+
+df_temp_subset = subset(df_temp, Country %in% c('United States', 'India', 'Japan', 'Germany', 'Indonesia', 'France', 'Brazil', 'United Kingdom', 'Italy', 'Mexico', 'China, P.R.: Mainland'))
+
+
+df_temp_subset_average = df_temp_subset %>%
+  group_by(Country) %>%
+  summarise(average = mean(Value))
 
 ggplot(data=subset(df_temp, Country %in% c('United States', 'India', 'Japan', 'Germany', 'Indonesia', 'France', 'Brazil', 'United Kingdom', 'Italy', 'Mexico', 'China, P.R.: Mainland')), aes(x=Year, y=Value, group = Country, colour = Country)) +
   geom_line() +
   geom_point()
 
+ggplot(data = df_temp_subset, aes(x = reorder(Country, Value, median), y = Value)) + 
+  geom_boxplot()
+
+library(ggridges)
+library(forcats)
 
 ```
 
 ```{r}
 temp_change_removed['average'] = rowMeans(temp_change_removed[, -c(1, 2)])
 temp_ordered_average = temp_change_removed[order(temp_change_removed$average, decreasing = TRUE),]
-
+df_temp_subset$Year = substring(df_temp_subset$Year, 2)
+df_temp_subset_1970 = df_temp_subset[df_temp_subset$Year >= 1970,]
 
 
 gdp = gdp[gdp$Item == "Gross Domestic Product (GDP)",]
+colnames(gdp) = c('Country', 'Year', 'blank', 'GDP')
+
+gdp_temp = merge(df_temp_subset_1970, gdp, by.x = c("Country", 'Year'), by.y = c('Country', "Year"))
+
+ggplot(data = gdp_temp, aes(x = Value, y = GDP)) +
+  geom_point() +
+  facet_wrap(~Country)
+
+ggplot(data = gdp_temp, aes(x = Year, y = GDP, group = Country, color = Country)) + 
+  geom_point() + 
+  geom_line()
+
+ggplot(data =gdp_temp, aes(x = reorder(Country, GDP, median), y = GDP)) + 
+  geom_boxplot()
 ```
 
 
-```{r fig.width=10}
+```{r}
 world_co2 = world_co2[, -c(1, 3, 4, 5, 7, 8, 9, 10)]
 world_co2 = world_co2[world_co2$Unit == "Parts Per Million", ]
 
 ggplot(data = world_co2, aes(x = Date, y = Value)) +
-  geom_point() +
+  geom_point() 
 
 ```
 
 ```{r fig.width= 10, fig.height= 10}
+
 sea_level_change_region = sea_level_change[, -c(1:10)]
 
 ggplot(data = sea_level_change, aes(x = Date, y = Value, group = Measure, color = Measure)) + 
   geom_line()
 
+sl_change_mean = sea_level_change_region %>%
+  group_by(Measure) %>%
+  summarise(average = mean(Value))
+```
+
+```{r}
 ggplot(data = sea_level_change, aes(x = Date, y =Value)) +
   geom_line() +
   facet_wrap(~Measure)
+
+
+
+ggplot(data = sea_level_change, aes(Date, y = Value, group = Measure, color = Measure)) +
+  geom_line() 
+
+
+ggplot(data = sea_level_change, aes(x = reorder(Measure, Value, median), y = Value)) +
+  geom_boxplot() +
+  theme(axis.text.x = element_text(angle = 90))
+  
 ```
 
 ```{r}
@@ -107,10 +155,50 @@ sl_group = sea_level_change_region %>%
   group_by(Date) %>%
   summarize(mean_change = mean(Value))
 
+sl_group_new = sl_group
+
+sl_group_new$Date = substring(sl_group_new$Date, 1, 4)
+
+sl_group_new_tidy = sl_group_new %>%
+  group_by(Date) %>%
+  summarise(average = mean(mean_change))
+
+colnames(sl_group_new_tidy) = c("year", 'average_sea')
+
 ggplot(data = sl_group, aes(x = Date, y = mean_change)) +
   geom_line()
+
+df_icevolume_new = df_icevolume
+df_icevolume_new = df_icevolume_new[df_icevolume_new$year >= 1992, ]
+
+
+ice_sea = merge(sl_group_new_tidy, df_icevolume_new, by = "year")
+
+ggplot(data = ice_sea, aes(average_sea, average)) + 
+  geom_point() + 
+  geom_line() + 
+  geom_smooth(method = "lm", se = FALSE)
 ```
 
+```{r}
 
+df_temp_subset_1990 = df_temp_subset
+df_temp_subset_1990 = df_temp_subset_1990[df_temp_subset_1990$Year >= 1990,]
+df_temp_subset_1990$Country = as.character(df_temp_subset_1990$Country)
+df_temp_subset_1990$Country[df_temp_subset_1990$Country == "China, P.R.: Mainland"] = "China"
+
+temp_ghg = merge(df_temp_subset_1990, ghg_chen, by.x = c("Country", "Year"),  by.y = c("Country", "Year"))
+temp_ghg$Year = as.factor(temp_ghg$Year )
+
+ggplot(data = temp_ghg, aes(x = Value, y = value)) +
+  geom_point() +
+  geom_line() +
+  facet_wrap(~Country)
+
+ggplot(data = temp_ghg, aes(x = Year, y = value, group = Country, color = Country)) +
+  geom_point() + 
+  geom_line()
+
+```
 
 
